name:
  potoki-core
version:
  0.6
synopsis:
  Low-level components of "potoki"
description:
  Consider this library to be the Internals modules of \"potoki\".
category:
  Streaming
homepage:
  https://github.com/nikita-volkov/potoki-core 
bug-reports:
  https://github.com/nikita-volkov/potoki-core/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2017, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/potoki-core.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Potoki.Core.Produce
    Potoki.Core.Fetch
    Potoki.Core.Consume
    Potoki.Core.Transform
    Potoki.Core.IO
  other-modules:
    Potoki.Core.Prelude
  build-depends:
    -- 
    attoparsec >=0.13 && <0.15,
    -- 
    text >=1 && <2,
    bytestring ==0.10.*,
    deque >=0.2 && <0.3,
    -- 
    async >=2.1 && <3,
    unagi-chan >=0.4 && <0.5,
    -- 
    directory >=1.3 && <2,
    unordered-containers >=0.2 && <0.3,
    foldl >=1.3 && <2,
    contravariant >=1.4 && <2,
    profunctors >=5.2 && <6,
    kan-extensions ==5.*,
    base-prelude <2,
    bug >=1 && <2,
    base >=4.7 && <5
