name:
  potoki-core
version:
  3
synopsis:
  Low-level components of "potoki"
description:
  Provides everything required for building custom instances of
  the \"potoki\" abstractions.
  Consider this library to be the Internals modules of \"potoki\".
category:
  Streaming
homepage:
  https://github.com/metrix-ai/potoki-core 
bug-reports:
  https://github.com/metrix-ai/potoki-core/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Metrix.AI Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2017, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    git://github.com/metrix-ai/potoki-core.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Potoki.Core.Produce
    Potoki.Core.ProduceConcurrently
    Potoki.Core.ProduceSequentially
    Potoki.Core.EatOne
    Potoki.Core.Transduce
    Potoki.Core.TransduceConcurrently
    Potoki.Core.Reduce
    Potoki.Core.ReduceSequentially
    Potoki.Core.ReduceZipping
    Potoki.Core.IO
  other-modules:
    Potoki.Core.Types
    Potoki.Core.Prelude
  build-depends:
    attoparsec >=0.13 && <0.15,
    base >=4.7 && <5,
    bytestring ==0.10.*,
    contravariant >=1.4 && <2,
    deferred-folds >=0.5.1 && <0.6,
    directory >=1.3 && <2,
    foldl >=1.3 && <2,
    hashable >=1 && <2,
    pointed >=5 && <6,
    profunctors >=5.2 && <6,
    ptr >=0.16.2 && <0.17,
    semigroupoids >=5.2 && <6,
    stm >=2.4 && <3,
    text >=1 && <2,
    transformers >=0.5 && <0.6,
    unagi-chan >=0.4 && <0.5,
    unordered-containers >=0.2 && <0.3,
    vector >=0.12 && <0.13
